--- a/style.css
+++ b/style.css
@@ -10,196 +10,6 @@
  *
  */
 
-body {
-	background-color: #f5f5f5;
-	color: rgb(51,51,51);
-
-	font-family: Lora, Helvetica, Arial, sans-serif;
-	line-height: 1.3em;
-	min-width: 320px;
+:root {
+	--ropecon-highlight-one: #5472d2;
 }
-
-.dynamic-width,
-#content > * {
-	padding-right: 30px;
-	padding-left: 30px;
-}
-	#content > .alignfull {
-		padding: 0;
-	}
-
-@media screen and (min-width: 1024px) {
-	.dynamic-width,
-	#content > *,
-	#content > .alignfull > div[class$="__inner-container"] {
-		margin: 0 auto;
-		width: 80%;
-		max-width: 1200px;
-	}
-
-	#content > .alignwide {
-		width: 90%;
-		max-width: 1350px;
-	}
-		#content > .alignwide > div[class$="__inner-container"] {
-			padding-left: 5%;
-			padding-right: 5%;
-		}
-	#content > .alignfull {
-		padding-left: 0;
-		padding-right: 0;
-		width: 100%;
-		max-width: 100vw;
-	}
-		#content > .alignfull > div[class$="__inner-container"] {
-			padding-right: 30px;
-			padding-left: 30px;
-		}
-}
-
-/*
- *  Header
- *
- */
-
-#header {
-	position: absolute;
-	z-index: 1000;
-	height: 65px;
-
-	width: 100%;
-	min-width: 320px;
-	border-bottom: 1px solid rgba(255,255,255,0.15);
-}
-	#header #title_main,
-	#header nav {
-		display: block;
-	}
-
-	#header #title_main {
-		float: left;
-		margin-right: 30px;
-	}
-		#header #title_main #title {
-			margin: 0;
-			font-size: 100%;
-		}
-			#header #title_main #title img {
-				display: block;
-				height: 49px;
-				margin-top: 8px;
-			}
-	#header nav {
-		float: left;
-	}
-		#header nav ul {
-			margin-bottom: 0;
-			white-space: nowrap;
-		}
-			#header nav li,
-			#header nav li a {
-				display: inline-block;
-			}
-				#header nav li {
-					margin-right: 1em;
-				}
-					#header nav li a {
-						padding-left: 0.5em;
-						padding-right: 0.5em;
-						line-height: 65px;
-					}
-						#header nav li.menu-item-has-children a {
-							padding-right: 1em;
-						}
-						#header nav li .sub-menu {
-							padding-top: 1em;
-							padding-bottom: 1em;
-						}
-						#header nav li .sub-menu a {
-							color: rgba(255,255,255,0.5);
-							line-height: 48px;
-							padding-left: 1.75em;
-							padding-right: 1.75em;
-						}
-
-/*  Header link style  */
-
-#header a {
-	border-bottom: none;
-}
-	#header nav a:link, #header nav a:link, #header nav a:visited {
-		color: rgba(255,255,255,0.8);
-	}
-	#header nav a:hover, #header nav a:active, #header nav a:focus {
-		color: rgba(255,255,255,1);
-	}
-
-/*
- *  Content area
- *
- */
-
-#content {
-	min-height: 400px;
-}
-
-/*
- *  Footer
- *
- */
-
-footer,
-#copyright {
-	padding: 1.5em 0;
-}
-
-	footer {
-		position: relative;
-		z-index: 10000;
-		background-color: #232323;
-		color: #f5f5f5;
-		font-size: 90%;
-	}
-		footer .dynamic-width {
-			width: 100%;
-		}
-			footer .menu a, footer .menu a:link, footer .menu a:visited {
-				color: #fff;
-			}
-				footer .menu a, footer .menu a:link, footer .menu a:visited {
-					display: block;
-					opacity: 0.5;
-				}
-					footer ul.sub-menu {
-						margin-left: 2em;
-						margin-bottom: 0;
-					}
-
-@media screen and (min-width: 600px) {
-	footer .dynamic-width {
-		display: grid;
-		grid-template-columns: repeat(2,1fr);
-		grid-template-rows: auto 90px auto;
-		grid-gap: 2em 4em;
-
-		grid-template-areas: "one one" "two three" "two four";
-	}
-		footer .dynamic-width :nth-child(1) { grid-area: one; }
-		footer .dynamic-width :nth-child(2) { grid-area: two; }
-		footer .dynamic-width :nth-child(3) { grid-area: four; }
-		footer .dynamic-width :nth-child(4) { grid-area: three; }
-
-}
-
-@media screen and (min-width: 1024px) {
-	footer .dynamic-width {
-		grid-template-columns: repeat(4,1fr);
-		grid-template-areas: "one two three four";
-	}
-}
-
-	#copyright {
-		background-color: #1e1e1e;
-		color: rgba(245,245,245,0.5);
-		font-size: 80%;
-	}
